初始化环境，添加xsd、dtd解析注释

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ buildSrc/build
 /spring-*/build
 /src/asciidoc/build
 target/
+springStudy/build/
 
 # Eclipse artifacts, including WTP generated manifests
 .classpath
