--- a/build.gradle
+++ b/build.gradle
@@ -1186,6 +1186,14 @@ project("spring-framework-bom") {
 	}
 }
 
+project("springStudy") {
+	dependencies{
+		compile(project(":spring-core"))
+		optional(project(":spring-beans"))
+		optional(project(":spring-context"))
+	}
+}
+
 sonarqube {
 	properties {
 		property "sonar.projectName", "Spring Framework"
