--- a/settings.gradle
+++ b/settings.gradle
@@ -23,6 +23,7 @@ include "spring-webmvc"
 include "spring-webflux"
 include "spring-websocket"
 include "spring-framework-bom"
+include "springStudy"
 
 // Exposes gradle buildSrc for IDE support
 include "buildSrc"
